2006-05-26  Roland CLobus <rclobus@bigfoot.com>
	* editor/gtk/editor.c, server/gtk/main.c, server/main.c, 
	client/gtk/offline.c, client/ai/ai.c: Quit when unknown commandline 
	options are passed
	
2006-05-25  Bas Wijnen
	* common/state.c, common/state.h, server/player.c: Make server handle
	broken pipe correctly.

2006-05-25  Roland Clobus <rclobus@bigfoot.com>
	* common/gtk/common_gtk.c, common/log.c, common/log.h,
	client/common/chat.c:
	Better layout for the log to the console
	
2006-05-24  Roland Clobus <rclobus@bigfoot.com>
	* configure.ac: Nicer feedback when something is not built
	
2006-05-23  Roland Clobus <rclobus@bigfoot.com>
	* editor/gtk/editor.c, server/gtk/main.c, server/main.c,
	client/gtk/offline.c: Updates comments for translators
	* client/common/client.c: Removed g_warning() text from translations
	
2006-05-21  Giancarlo Capella <giancarlo@comm.cc>
	* client/gtk/frontend.h, client/gtk/resource.c,
	client/gtk/data/grain.png, client/gtk/data/wool.png,
	client/gtk/data/ore.png, client/gtk/data/Makefile.am,
	client/gtk/data/lumber.png, client/gtk/data/brick.png,
	client/gtk/legend.c, client/gtk/gui.c, client/gtk/gui.h: Visual display
	of the resources in the resources panel and the legend

2006-05-20  Roland Clobus <rclobus@bigfoot.com>
	* common/quoteinfo.c, common/game.c, common/quoteinfo.h,
	client/callback.h, client/gtk/interface.c, client/gtk/plenty.c,
	client/gtk/frontend.h, client/gtk/gold.c, client/gtk/quote.c,
	client/gtk/legend.c, client/gtk/trade.c, client/gtk/discard.c,
	client/gtk/chat.c, client/common/client.c, client/common/client.h,
	client/common/resource.c, client/common/callback.c,
	client/common/player.c: Added const for resources
	* client/gtk/Makefile.am: Added quote-view.c and quote-view.h
	* client/gtk/trade.c, client/gtk/quote-view.c, client/gtk/quote-view.h:
	Moved code from trade.c to quote-view.c and replaced frames
	* client/gtk/player.c, client/gtk/discard.c: More descriptive asserts